# python-new-project-setup

./: README.md  pyproject.toml
python_new_project_setup/: __init__.py
